Fix: Visibly disable the lockscreen feature in IE Fix: Reduced add task image sizes to reduce aliasing problem

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,9 @@ a {
 	text-decoration: none;
 	color: #388cc5;
 }
+a img {
+	border: 0px;
+}
 /** Generics **/
 .stroke { /* Give a outline to the text */
 	text-shadow: -1px -1px 0 rgba(0,0,0,0.6), 1px -1px 0 rgba(0,0,0,0.6), -1px 1px 0 rgba(0,0,0,0.6), 1px 1px 0 rgba(0,0,0,0.6);
